# api-types-generator

./: README.md  package.json  pnpm-lock.yaml  test.ts
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/algorithm/: createNestProjectApiMap.ts  flatten.ts  flattenStruct.ts  getProjectApiTypeDirectory.ts
src/types/: getApiByProjectId.ts  getApiInfoByApiId.ts  getApiTypeByBody.ts
