[package]
name = "api-types-generator"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
tauri = { version = "1.6.1", features = [ "api-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = {version = "2.9.6", features = ["json", "cookies"] }
